--- a/index.html
+++ b/index.html
@@ -4,14 +4,120 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
 
     <title>Template</title>
   </head>
   <body>
+    <header>
+      <nav>
+        <ul>
+          <li>Menu 01</li>
+          <li>Menu 01</li>
+          <li>Menu 01</li>
+          <li>Menu 01</li>
+        </ul>
+      </nav>
+      <h1>SUNDAYS</h1>
+      <h2>We craft ocean friendly apparel</h2>
+      <a href="#">BROWSE OUR PRODUCTS</a>
+      <a href="#">flèche</a>
+    </header>
     <main>
-
+      <h2>Spring Summer 2017</h2>
+      <div class="container">
+        <div class="row">
+          <div class="col-12 col-md-2">
+            <article>
+              <img src="https://picsum.photos/200/300/?random" alt="">
+              <h3>BUY</h3>
+              <h4>Winter Scarf</h4>
+              <h5>180$</h5>
+            </article>
+          </div>
+          <div class="col-12 col-md-2">
+            <article>
+              <img src="https://picsum.photos/200/300/?random" alt="">
+              <h3>BUY</h3>
+              <h4>Winter Scarf</h4>
+              <h5>180$</h5>
+            </article>
+          </div>
+          <div class="col-12 col-md-2">
+            <article>
+              <img src="https://picsum.photos/200/300/?random" alt="">
+              <h3>BUY</h3>
+              <h4>Winter Scarf</h4>
+              <h5>180$</h5>
+            </article>
+          </div>
+          <div class="col-12 col-md-2">
+            <article>
+              <img src="https://picsum.photos/200/300/?random" alt="">
+              <h3>BUY</h3>
+              <h4>Winter Scarf</h4>
+              <h5>180$</h5>
+            </article>
+          </div>
+          <div class="col-12 col-md-2">
+            <article>
+              <img src="https://picsum.photos/200/300/?random" alt="">
+              <h3>BUY</h3>
+              <h4>Winter Scarf</h4>
+              <h5>180$</h5>
+            </article>
+          </div>
+          <div class="col-12 col-md-2">
+            <article>
+              <img src="https://picsum.photos/200/300/?random" alt="">
+              <h3>BUY</h3>
+              <h4>Winter Scarf</h4>
+              <h5>180$</h5>
+            </article>
+          </div>
+        </div>
+      </div>
     </main>
+    <footer>
+      <div class="container">
+        <div class="row">
+          <div class="col-12 col-md-3">
+            <h3>Quick links</h3>
+            <ul>
+              <li><a href="#">About Us</a></li>
+              <li><a href="#">Blog</a></li>
+              <li><a href="#">Careers</a></li>
+            </ul>
+          </div>
+          <div class="col-12 col-md-3">
+            <h3>Contact us</h3>
+            <ul>
+              <li><i class="fab fa-accessible-icon"></i><a href="#">@californiatheme</a></li>
+              <li><i class="fab fa-accessible-icon"></i><a href="#">support@smallvictories.co</a></li>
+              <li><i class="fab fa-accessible-icon"></i><a href="#">+1 917 (123) 4567</a></li>
+            </ul>
+          </div>
+          <div class="col-12 col-md-3">
+            <h3>Newsletter</h3>
+            <div class="input-group mb-3">
+              <input type="text" class="form-control" placeholder="Your email..." aria-label="Your email..." aria-describedby="basic-addon2">
+              <div class="input-group-append">
+                <button class="btn border-primary" type="button">OK</button>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-md-3">
+            <h3>Follow us</h3>
+            <ul>
+              <li><i class="fab fa-accessible-icon"></i><a href="#">Pinterest</a></li>
+              <li><i class="fab fa-accessible-icon"></i><a href="#">Instagram</a></li>
+              <li><i class="fab fa-accessible-icon"></i><a href="#">Vimeo</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </footer>
 
     <script src="node_modules/jquery/dist/jquery.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
