--- a/index.html
+++ b/index.html
@@ -11,30 +11,30 @@
   </head>
   <body>
     <header>
-        <nav class="navbar navbar-expand-lg">
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
+        <nav class="navbar navbar-expand-lg navbar-dark">
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
 
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
-          <a class="nav-link" href="#">Catalog<span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">About Us</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Stores</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Blog</a>
-        </li>
-    </ul>
-    <form class="form-inline my-2 my-lg-0">
-    <i class="fab fa-accessible-icon"></i>
-  </form>
-    </div>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+              <li class="nav-item active">
+                <a class="nav-link" href="#">Catalog<span class="sr-only">(current)</span></a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">About Us</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Stores</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Blog</a>
+              </li>
+            </ul>
+        <form class="form-inline my-2 my-lg-0">
+          <i class="fab fa-accessible-icon"></i>
+        </form>
+      </div>
   </nav>
       <h1>SUNDAYS</h1>
       <h2>We craft ocean friendly apparel</h2>
@@ -45,52 +45,184 @@
       <h2>Spring Summer 2017</h2>
       <div class="container">
         <div class="row">
-          <div class="col-12 col-md-2">
+          <div class="col-6 col-sm-3 col-md-2 p-1">
             <article>
-              <img src="https://picsum.photos/200/300/?random" alt="">
-              <h3>BUY</h3>
-              <h4>Winter Scarf</h4>
-              <h5>180$</h5>
+              <img class="img-fluid" src="https://picsum.photos/300/400/?random" alt="">
+              <div class="article-div">
+                <h3>BUY</h3>
+                <h4>Winter Scarf</h4>
+                <h5>180$</h5>
+              </div>
             </article>
           </div>
-          <div class="col-12 col-md-2">
+          <div class="col-6 col-sm-3 col-md-2 p-1">
             <article>
-              <img src="https://picsum.photos/200/300/?random" alt="">
-              <h3>BUY</h3>
-              <h4>Winter Scarf</h4>
-              <h5>180$</h5>
+              <img class="img-fluid" src="https://picsum.photos/300/400/?random" alt="">
+              <div class="article-div">
+                <h3>BUY</h3>
+                <h4>Winter Scarf</h4>
+                <h5>180$</h5>
+              </div>
             </article>
           </div>
-          <div class="col-12 col-md-2">
+          <div class="col-6 col-sm-3 col-md-2 p-1">
             <article>
-              <img src="https://picsum.photos/200/300/?random" alt="">
-              <h3>BUY</h3>
-              <h4>Winter Scarf</h4>
-              <h5>180$</h5>
+              <img class="img-fluid" src="https://picsum.photos/300/400/?random" alt="">
+              <div class="article-div">
+                <h3>ON SALE</h3>
+                <h4>Winter Scarf</h4>
+                <h5>180$</h5>
+              </div>
             </article>
           </div>
-          <div class="col-12 col-md-2">
+          <div class="col-6 col-sm-3 col-md-2 p-1">
             <article>
-              <img src="https://picsum.photos/200/300/?random" alt="">
-              <h3>BUY</h3>
-              <h4>Winter Scarf</h4>
-              <h5>180$</h5>
+              <img class="img-fluid" src="https://picsum.photos/300/400/?random" alt="">
+              <div class="article-div">
+                <h3>SOLD OUT</h3>
+                <h4>Winter Scarf</h4>
+                <h5>180$</h5>
+              </div>
             </article>
           </div>
-          <div class="col-12 col-md-2">
+          <div class="col-6 col-sm-3 col-md-2 p-1">
             <article>
-              <img src="https://picsum.photos/200/300/?random" alt="">
-              <h3>BUY</h3>
-              <h4>Winter Scarf</h4>
-              <h5>180$</h5>
+              <img class="img-fluid" src="https://picsum.photos/300/400/?random" alt="">
+              <div class="article-div">
+                <h3>BUY</h3>
+                <h4>Winter Scarf</h4>
+                <h5>180$</h5>
+              </div>
             </article>
           </div>
-          <div class="col-12 col-md-2">
+          <div class="col-6 col-sm-3 col-md-2 p-1">
             <article>
-              <img src="https://picsum.photos/200/300/?random" alt="">
-              <h3>BUY</h3>
-              <h4>Winter Scarf</h4>
-              <h5>180$</h5>
+              <img class="img-fluid" src="https://picsum.photos/300/400/?random" alt="">
+              <div class="article-div">
+                <h3>BUY</h3>
+                <h4>Winter Scarf</h4>
+                <h5>180$</h5>
+              </div>
+            </article>
+          </div>
+          <div class="col-6 col-sm-3 col-md-2 p-1">
+            <article>
+              <img class="img-fluid" src="https://picsum.photos/300/400/?random" alt="">
+              <div class="article-div">
+                <h3>BUY</h3>
+                <h4>Winter Scarf</h4>
+                <h5>180$</h5>
+              </div>
+            </article>
+          </div>
+          <div class="col-6 col-sm-3 col-md-2 p-1">
+            <article>
+              <img class="img-fluid" src="https://picsum.photos/300/400/?random" alt="">
+              <div class="article-div">
+                <h3>BUY</h3>
+                <h4>Winter Scarf</h4>
+                <h5>180$</h5>
+              </div>
+            </article>
+          </div>
+          <div class="col-6 col-sm-3 col-md-2 p-1">
+            <article>
+              <img class="img-fluid" src="https://picsum.photos/300/400/?random" alt="">
+              <div class="article-div">
+                <h3>ON SALE</h3>
+                <h4>Winter Scarf</h4>
+                <h5>180$</h5>
+              </div>
+            </article>
+          </div>
+          <div class="col-6 col-sm-3 col-md-2 p-1">
+            <article>
+              <img class="img-fluid" src="https://picsum.photos/300/400/?random" alt="">
+              <div class="article-div">
+                <h3>SOLD OUT</h3>
+                <h4>Winter Scarf</h4>
+                <h5>180$</h5>
+              </div>
+            </article>
+          </div>
+          <div class="col-6 col-sm-3 col-md-2 p-1">
+            <article>
+              <img class="img-fluid" src="https://picsum.photos/300/400/?random" alt="">
+              <div class="article-div">
+                <h3>BUY</h3>
+                <h4>Winter Scarf</h4>
+                <h5>180$</h5>
+              </div>
+            </article>
+          </div>
+          <div class="col-6 col-sm-3 col-md-2 p-1">
+            <article>
+              <img class="img-fluid" src="https://picsum.photos/300/400/?random" alt="">
+              <div class="article-div">
+                <h3>BUY</h3>
+                <h4>Winter Scarf</h4>
+                <h5>180$</h5>
+              </div>
+            </article>
+          </div>
+          <div class="col-6 col-sm-3 col-md-2 p-1">
+            <article>
+              <img class="img-fluid" src="https://picsum.photos/300/400/?random" alt="">
+              <div class="article-div">
+                <h3>BUY</h3>
+                <h4>Winter Scarf</h4>
+                <h5>180$</h5>
+              </div>
+            </article>
+          </div>
+          <div class="col-6 col-sm-3 col-md-2 p-1">
+            <article>
+              <img class="img-fluid" src="https://picsum.photos/300/400/?random" alt="">
+              <div class="article-div">
+                <h3>BUY</h3>
+                <h4>Winter Scarf</h4>
+                <h5>180$</h5>
+              </div>
+            </article>
+          </div>
+          <div class="col-6 col-sm-3 col-md-2 p-1">
+            <article>
+              <img class="img-fluid" src="https://picsum.photos/300/400/?random" alt="">
+              <div class="article-div">
+                <h3>ON SALE</h3>
+                <h4>Winter Scarf</h4>
+                <h5>180$</h5>
+              </div>
+            </article>
+          </div>
+          <div class="col-6 col-sm-3 col-md-2 p-1">
+            <article>
+              <img class="img-fluid" src="https://picsum.photos/300/400/?random" alt="">
+              <div class="article-div">
+                <h3>SOLD OUT</h3>
+                <h4>Winter Scarf</h4>
+                <h5>180$</h5>
+              </div>
+            </article>
+          </div>
+          <div class="col-6 col-sm-3 col-md-2 p-1">
+            <article>
+              <img class="img-fluid" src="https://picsum.photos/300/400/?random" alt="">
+              <div class="article-div">
+                <h3>BUY</h3>
+                <h4>Winter Scarf</h4>
+                <h5>180$</h5>
+              </div>
+            </article>
+          </div>
+          <div class="col-6 col-sm-3 col-md-2 p-1">
+            <article>
+              <img class="img-fluid" src="https://picsum.photos/300/400/?random" alt="">
+              <div class="article-div">
+                <h3>BUY</h3>
+                <h4>Winter Scarf</h4>
+                <h5>180$</h5>
+              </div>
             </article>
           </div>
         </div>
