font + suite CSS + modification contenu articles

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Merriweather:400,700" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 
     <title>Template</title>
@@ -61,7 +62,7 @@
               <div class="article-div">
                 <h3>BUY</h3>
                 <h4>Winter Scarf</h4>
-                <h5>180$</h5>
+                <h5>$180.00</h5>
               </div>
             </article>
           </div>
@@ -70,8 +71,8 @@
               <img class="img-fluid" src="https://picsum.photos/300/400/?random" alt="">
               <div class="article-div">
                 <h3>ON SALE</h3>
-                <h4>Winter Scarf</h4>
-                <h5>180$</h5>
+                <h4>Summer Sandals</h4>
+                <h5>$220.00</h5>
               </div>
             </article>
           </div>
@@ -79,8 +80,8 @@
             <article>
               <img class="img-fluid" src="https://picsum.photos/300/400/?random" alt="">
               <div class="article-div">
-                <h3>SOLD OUT</h3>
-                <h4>Winter Scarf</h4>
+                <h3>BUY</h3>
+                <h4></h4>
                 <h5>180$</h5>
               </div>
             </article>
