--- a/index.html
+++ b/index.html
@@ -81,8 +81,128 @@
               <img class="img-fluid" src="https://picsum.photos/300/400/?random" alt="">
               <div class="article-div">
                 <h3>BUY</h3>
-                <h4></h4>
-                <h5>180$</h5>
+                <h4>Red Had and Worf</h4>
+                <h5>$20.00</h5>
+              </div>
+            </article>
+          </div>
+          <div class="col-6 col-sm-3 col-md-2 p-1">
+            <article>
+              <img class="img-fluid" src="https://picsum.photos/300/400/?random" alt="">
+              <div class="article-div">
+                <h3>BUY</h3>
+                <h4>Green Coat</h4>
+                <h5>$220.00</h5>
+              </div>
+            </article>
+          </div>
+          <div class="col-6 col-sm-3 col-md-2 p-1">
+            <article>
+              <img class="img-fluid" src="https://picsum.photos/300/400/?random" alt="">
+              <div class="article-div">
+                <h3>ON SALE</h3>
+                <h4>Dark Coat</h4>
+                <h5>$220.00</h5>
+              </div>
+            </article>
+          </div>
+          <div class="col-6 col-sm-3 col-md-2 p-1">
+            <article>
+              <img class="img-fluid" src="https://picsum.photos/300/400/?random" alt="">
+              <div class="article-div">
+                <h3>BUY</h3>
+                <h4>Blue Troursers</h4>
+                <h5>$220.00</h5>
+              </div>
+            </article>
+          </div>
+          <div class="col-6 col-sm-3 col-md-2 p-1">
+            <article>
+              <img class="img-fluid" src="https://picsum.photos/300/400/?random" alt="">
+              <div class="article-div">
+                <h3>SOLD OUT</h3>
+                <h4>Blue Sweater</h4>
+                <h5>$220.00</h5>
+              </div>
+            </article>
+          </div>
+          <div class="col-6 col-sm-3 col-md-2 p-1">
+            <article>
+              <img class="img-fluid" src="https://picsum.photos/300/400/?random" alt="">
+              <div class="article-div">
+                <h3>BUY</h3>
+                <h4>Blue Shirt</h4>
+                <h5>$220.00</h5>
+              </div>
+            </article>
+          </div>
+          <div class="col-6 col-sm-3 col-md-2 p-1">
+            <article>
+              <img class="img-fluid" src="https://picsum.photos/300/400/?random" alt="">
+              <div class="article-div">
+                <h3>ON SALE</h3>
+                <h4>Blue backpack</h4>
+                <h5>$120.00</h5>
+              </div>
+            </article>
+          </div>
+          <div class="col-6 col-sm-3 col-md-2 p-1">
+            <article>
+              <img class="img-fluid" src="https://picsum.photos/300/400/?random" alt="">
+              <div class="article-div">
+                <h3>ON SALE</h3>
+                <h4>Beach Chair</h4>
+                <h5>$80.00</h5>
+              </div>
+            </article>
+          </div>
+          <div class="col-6 col-sm-3 col-md-2 p-1">
+            <article>
+              <img class="img-fluid" src="https://picsum.photos/300/400/?random" alt="">
+              <div class="article-div">
+                <h3>ON SALE</h3>
+                <h4>Decoration Letter</h4>
+                <h5>$120.00</h5>
+              </div>
+            </article>
+          </div>
+          <div class="col-6 col-sm-3 col-md-2 p-1">
+            <article>
+              <img class="img-fluid" src="https://picsum.photos/300/400/?random" alt="">
+              <div class="article-div">
+                <h3>ON SALE</h3>
+                <h4>Sutton Bench</h4>
+                <h5>$120.00</h5>
+              </div>
+            </article>
+          </div>
+          <div class="col-6 col-sm-3 col-md-2 p-1">
+            <article>
+              <img class="img-fluid" src="https://picsum.photos/300/400/?random" alt="">
+              <div class="article-div">
+                <h3>BUY</h3>
+                <h4>Red Troursers</h4>
+                <h5>$220.00</h5>
+              </div>
+            </article>
+          </div>
+          <div class="col-6 col-sm-3 col-md-2 p-1">
+            <article>
+              <img class="img-fluid" src="https://picsum.photos/300/400/?random" alt="">
+              <div class="article-div">
+                <h3>ON SALE</h3>
+                <h4>Winter Sandals</h4>
+                <h5>$220.00</h5>
+              </div>
+            </article>
+          </div>
+          <div class="col-6 col-sm-3 col-md-2 p-1">
+            <article>
+              <img class="img-fluid" src="https://picsum.photos/300/400/?random" alt="">
+              <div class="article-div">
+                <h3>ON SALE</h3>
+                <h4>Beach Chair</h4>
+                <h5>$80.00</h5>
               </div>
             </article>
           </div>
@@ -92,37 +212,7 @@
               <div class="article-div">
                 <h3>BUY</h3>
                 <h4>Winter Scarf</h4>
-                <h5>180$</h5>
-              </div>
-            </article>
-          </div>
-          <div class="col-6 col-sm-3 col-md-2 p-1">
-            <article>
-              <img class="img-fluid" src="https://picsum.photos/300/400/?random" alt="">
-              <div class="article-div">
-                <h3>BUY</h3>
-                <h4>Winter Scarf</h4>
-                <h5>180$</h5>
-              </div>
-            </article>
-          </div>
-          <div class="col-6 col-sm-3 col-md-2 p-1">
-            <article>
-              <img class="img-fluid" src="https://picsum.photos/300/400/?random" alt="">
-              <div class="article-div">
-                <h3>BUY</h3>
-                <h4>Winter Scarf</h4>
-                <h5>180$</h5>
-              </div>
-            </article>
-          </div>
-          <div class="col-6 col-sm-3 col-md-2 p-1">
-            <article>
-              <img class="img-fluid" src="https://picsum.photos/300/400/?random" alt="">
-              <div class="article-div">
-                <h3>BUY</h3>
-                <h4>Winter Scarf</h4>
-                <h5>180$</h5>
+                <h5>$180.00</h5>
               </div>
             </article>
           </div>
@@ -132,97 +222,7 @@
               <div class="article-div">
                 <h3>ON SALE</h3>
                 <h4>Winter Scarf</h4>
-                <h5>180$</h5>
-              </div>
-            </article>
-          </div>
-          <div class="col-6 col-sm-3 col-md-2 p-1">
-            <article>
-              <img class="img-fluid" src="https://picsum.photos/300/400/?random" alt="">
-              <div class="article-div">
-                <h3>SOLD OUT</h3>
-                <h4>Winter Scarf</h4>
-                <h5>180$</h5>
-              </div>
-            </article>
-          </div>
-          <div class="col-6 col-sm-3 col-md-2 p-1">
-            <article>
-              <img class="img-fluid" src="https://picsum.photos/300/400/?random" alt="">
-              <div class="article-div">
-                <h3>BUY</h3>
-                <h4>Winter Scarf</h4>
-                <h5>180$</h5>
-              </div>
-            </article>
-          </div>
-          <div class="col-6 col-sm-3 col-md-2 p-1">
-            <article>
-              <img class="img-fluid" src="https://picsum.photos/300/400/?random" alt="">
-              <div class="article-div">
-                <h3>BUY</h3>
-                <h4>Winter Scarf</h4>
-                <h5>180$</h5>
-              </div>
-            </article>
-          </div>
-          <div class="col-6 col-sm-3 col-md-2 p-1">
-            <article>
-              <img class="img-fluid" src="https://picsum.photos/300/400/?random" alt="">
-              <div class="article-div">
-                <h3>BUY</h3>
-                <h4>Winter Scarf</h4>
-                <h5>180$</h5>
-              </div>
-            </article>
-          </div>
-          <div class="col-6 col-sm-3 col-md-2 p-1">
-            <article>
-              <img class="img-fluid" src="https://picsum.photos/300/400/?random" alt="">
-              <div class="article-div">
-                <h3>BUY</h3>
-                <h4>Winter Scarf</h4>
-                <h5>180$</h5>
-              </div>
-            </article>
-          </div>
-          <div class="col-6 col-sm-3 col-md-2 p-1">
-            <article>
-              <img class="img-fluid" src="https://picsum.photos/300/400/?random" alt="">
-              <div class="article-div">
-                <h3>ON SALE</h3>
-                <h4>Winter Scarf</h4>
-                <h5>180$</h5>
-              </div>
-            </article>
-          </div>
-          <div class="col-6 col-sm-3 col-md-2 p-1">
-            <article>
-              <img class="img-fluid" src="https://picsum.photos/300/400/?random" alt="">
-              <div class="article-div">
-                <h3>SOLD OUT</h3>
-                <h4>Winter Scarf</h4>
-                <h5>180$</h5>
-              </div>
-            </article>
-          </div>
-          <div class="col-6 col-sm-3 col-md-2 p-1">
-            <article>
-              <img class="img-fluid" src="https://picsum.photos/300/400/?random" alt="">
-              <div class="article-div">
-                <h3>BUY</h3>
-                <h4>Winter Scarf</h4>
-                <h5>180$</h5>
-              </div>
-            </article>
-          </div>
-          <div class="col-6 col-sm-3 col-md-2 p-1">
-            <article>
-              <img class="img-fluid" src="https://picsum.photos/300/400/?random" alt="">
-              <div class="article-div">
-                <h3>BUY</h3>
-                <h4>Winter Scarf</h4>
-                <h5>180$</h5>
+                <h5>$120.00</h5>
               </div>
             </article>
           </div>
