--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
           <div class="col-12 col-md-3">
             <h3>Newsletter</h3>
             <form class="form-inline my-2 my-lg-0">
-              <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+              <input class="mr-sm-2" type="search" placeholder="Search" aria-label="Search">
               <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
             </form>
           </div>
