--- a/index.html
+++ b/index.html
@@ -33,20 +33,22 @@
               </li>
             </ul>
         <form class="form-inline my-2 my-lg-0">
-          <i class="fab fa-accessible-icon"></i>
+          <i class="fas fa-search"></i>
         </form>
       </div>
   </nav>
-      <h1>SUNDAYS</h1>
-      <h2>We craft ocean friendly apparel</h2>
-      <a class="btn" href="#">BROWSE OUR PRODUCTS</a>
-      <a href="#">flèche</a>
+      <div class="title">
+        <h1>SUNDAYS</h1>
+        <h2>We craft ocean friendly apparel</h2>
+        <a class="btn" href="#">BROWSE OUR PRODUCTS</a>
+      </div>
+      <a class="arrow" href="#"><i class="fas fa-angle-down"></i></a>
     </header>
     <main>
       <h2>Spring Summer 2017</h2>
       <div class="container">
         <div class="row">
-          <div class="col-6 col-sm-3 col-md-2 p-1">
+          <div class="col-6 col-sm-4 col-md-3 col-lg-2 p-1">
             <article>
               <img class="img-fluid" src="https://picsum.photos/300/400/?random" alt="">
               <div class="article-div">
@@ -56,7 +58,7 @@
               </div>
             </article>
           </div>
-          <div class="col-6 col-sm-3 col-md-2 p-1">
+          <div class="col-6 col-sm-4 col-md-3 col-lg-2 p-1">
             <article>
               <img class="img-fluid" src="https://picsum.photos/300/400/?random" alt="">
               <div class="article-div">
@@ -66,7 +68,7 @@
               </div>
             </article>
           </div>
-          <div class="col-6 col-sm-3 col-md-2 p-1">
+          <div class="col-6 col-sm-4 col-md-3 col-lg-2 p-1">
             <article>
               <img class="img-fluid" src="https://picsum.photos/300/400/?random" alt="">
               <div class="article-div">
@@ -76,7 +78,7 @@
               </div>
             </article>
           </div>
-          <div class="col-6 col-sm-3 col-md-2 p-1">
+          <div class="col-6 col-sm-4 col-md-3 col-lg-2 p-1">
             <article>
               <img class="img-fluid" src="https://picsum.photos/300/400/?random" alt="">
               <div class="article-div">
@@ -86,7 +88,7 @@
               </div>
             </article>
           </div>
-          <div class="col-6 col-sm-3 col-md-2 p-1">
+          <div class="col-6 col-sm-4 col-md-3 col-lg-2 p-1">
             <article>
               <img class="img-fluid" src="https://picsum.photos/300/400/?random" alt="">
               <div class="article-div">
@@ -96,7 +98,7 @@
               </div>
             </article>
           </div>
-          <div class="col-6 col-sm-3 col-md-2 p-1">
+          <div class="col-6 col-sm-4 col-md-3 col-lg-2 p-1">
             <article>
               <img class="img-fluid" src="https://picsum.photos/300/400/?random" alt="">
               <div class="article-div">
@@ -106,7 +108,7 @@
               </div>
             </article>
           </div>
-          <div class="col-6 col-sm-3 col-md-2 p-1">
+          <div class="col-6 col-sm-4 col-md-3 col-lg-2 p-1">
             <article>
               <img class="img-fluid" src="https://picsum.photos/300/400/?random" alt="">
               <div class="article-div">
@@ -116,7 +118,7 @@
               </div>
             </article>
           </div>
-          <div class="col-6 col-sm-3 col-md-2 p-1">
+          <div class="col-6 col-sm-4 col-md-3 col-lg-2 p-1">
             <article>
               <img class="img-fluid" src="https://picsum.photos/300/400/?random" alt="">
               <div class="article-div">
@@ -126,7 +128,7 @@
               </div>
             </article>
           </div>
-          <div class="col-6 col-sm-3 col-md-2 p-1">
+          <div class="col-6 col-sm-4 col-md-3 col-lg-2 p-1">
             <article>
               <img class="img-fluid" src="https://picsum.photos/300/400/?random" alt="">
               <div class="article-div">
@@ -136,7 +138,7 @@
               </div>
             </article>
           </div>
-          <div class="col-6 col-sm-3 col-md-2 p-1">
+          <div class="col-6 col-sm-4 col-md-3 col-lg-2 p-1">
             <article>
               <img class="img-fluid" src="https://picsum.photos/300/400/?random" alt="">
               <div class="article-div">
@@ -146,7 +148,7 @@
               </div>
             </article>
           </div>
-          <div class="col-6 col-sm-3 col-md-2 p-1">
+          <div class="col-6 col-sm-4 col-md-3 col-lg-2 p-1">
             <article>
               <img class="img-fluid" src="https://picsum.photos/300/400/?random" alt="">
               <div class="article-div">
@@ -156,7 +158,7 @@
               </div>
             </article>
           </div>
-          <div class="col-6 col-sm-3 col-md-2 p-1">
+          <div class="col-6 col-sm-4 col-md-3 col-lg-2 p-1">
             <article>
               <img class="img-fluid" src="https://picsum.photos/300/400/?random" alt="">
               <div class="article-div">
@@ -166,7 +168,7 @@
               </div>
             </article>
           </div>
-          <div class="col-6 col-sm-3 col-md-2 p-1">
+          <div class="col-6 col-sm-4 col-md-3 col-lg-2 p-1">
             <article>
               <img class="img-fluid" src="https://picsum.photos/300/400/?random" alt="">
               <div class="article-div">
@@ -176,7 +178,7 @@
               </div>
             </article>
           </div>
-          <div class="col-6 col-sm-3 col-md-2 p-1">
+          <div class="col-6 col-sm-4 col-md-3 col-lg-2 p-1">
             <article>
               <img class="img-fluid" src="https://picsum.photos/300/400/?random" alt="">
               <div class="article-div">
@@ -186,7 +188,7 @@
               </div>
             </article>
           </div>
-          <div class="col-6 col-sm-3 col-md-2 p-1">
+          <div class="col-6 col-sm-4 col-md-3 col-lg-2 p-1">
             <article>
               <img class="img-fluid" src="https://picsum.photos/300/400/?random" alt="">
               <div class="article-div">
@@ -196,7 +198,7 @@
               </div>
             </article>
           </div>
-          <div class="col-6 col-sm-3 col-md-2 p-1">
+          <div class="col-6 col-sm-4 col-md-3 col-lg-2 p-1">
             <article>
               <img class="img-fluid" src="https://picsum.photos/300/400/?random" alt="">
               <div class="article-div">
@@ -206,7 +208,7 @@
               </div>
             </article>
           </div>
-          <div class="col-6 col-sm-3 col-md-2 p-1">
+          <div class="col-6 col-sm-4 col-md-3 col-lg-2 p-1">
             <article>
               <img class="img-fluid" src="https://picsum.photos/300/400/?random" alt="">
               <div class="article-div">
@@ -216,7 +218,7 @@
               </div>
             </article>
           </div>
-          <div class="col-6 col-sm-3 col-md-2 p-1">
+          <div class="col-6 col-sm-4 col-md-3 col-lg-2 p-1">
             <article>
               <img class="img-fluid" src="https://picsum.photos/300/400/?random" alt="">
               <div class="article-div">
@@ -243,24 +245,24 @@
           <div class="col-12 col-md-3">
             <h3>Contact us</h3>
             <ul>
-              <li><i class="fab fa-accessible-icon"></i><a href="#">@californiatheme</a></li>
-              <li><i class="fab fa-accessible-icon"></i><a href="#">support@smallvictories.co</a></li>
-              <li><i class="fab fa-accessible-icon"></i><a href="#">+1 917 (123) 4567</a></li>
+              <li><i class="fab fa-twitter"></i><a href="#">@californiatheme</a></li>
+              <li><i class="fas fa-envelope"></i><a href="#">support@smallvictories.co</a></li>
+              <li><i class="fas fa-phone"></i><a href="#">+1 917 (123) 4567</a></li>
             </ul>
           </div>
           <div class="col-12 col-md-3">
             <h3>Newsletter</h3>
             <form class="form-inline my-2 my-lg-0">
-              <input class="mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-              <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+              <input class="mr-sm-2" type="search" placeholder="Your email..." aria-label="Your email">
+              <button class="btn btn-outline-secondary my-2 my-sm-0" type="submit">OK</button>
             </form>
           </div>
           <div class="col-12 col-md-3">
             <h3>Follow us</h3>
             <ul>
-              <li><i class="fab fa-accessible-icon"></i><a href="#">Pinterest</a></li>
-              <li><i class="fab fa-accessible-icon"></i><a href="#">Instagram</a></li>
-              <li><i class="fab fa-accessible-icon"></i><a href="#">Vimeo</a></li>
+              <li><i class="fab fa-pinterest"></i><a href="#">Pinterest</a></li>
+              <li><i class="fab fa-instagram"></i><a href="#">Instagram</a></li>
+              <li><i class="fab fa-vimeo"></i><a href="#">Vimeo</a></li>
             </ul>
           </div>
         </div>
