--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Merriweather:400,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Quicksand:300" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 
     <title>Template</title>
@@ -48,7 +49,7 @@
       <h2>Spring Summer 2017</h2>
       <div class="container">
         <div class="row">
-          <div class="col-6 col-sm-4 col-md-3 col-lg-2 p-1">
+          <div class="col-6 col-sm-4 col-md-3 col-lg-2">
             <article>
               <img class="img-fluid" src="https://picsum.photos/300/400/?random" alt="">
               <div class="article-div">
@@ -58,7 +59,7 @@
               </div>
             </article>
           </div>
-          <div class="col-6 col-sm-4 col-md-3 col-lg-2 p-1">
+          <div class="col-6 col-sm-4 col-md-3 col-lg-2">
             <article>
               <img class="img-fluid" src="https://picsum.photos/300/400/?random" alt="">
               <div class="article-div">
@@ -68,7 +69,7 @@
               </div>
             </article>
           </div>
-          <div class="col-6 col-sm-4 col-md-3 col-lg-2 p-1">
+          <div class="col-6 col-sm-4 col-md-3 col-lg-2">
             <article>
               <img class="img-fluid" src="https://picsum.photos/300/400/?random" alt="">
               <div class="article-div">
@@ -78,7 +79,7 @@
               </div>
             </article>
           </div>
-          <div class="col-6 col-sm-4 col-md-3 col-lg-2 p-1">
+          <div class="col-6 col-sm-4 col-md-3 col-lg-2">
             <article>
               <img class="img-fluid" src="https://picsum.photos/300/400/?random" alt="">
               <div class="article-div">
@@ -88,7 +89,7 @@
               </div>
             </article>
           </div>
-          <div class="col-6 col-sm-4 col-md-3 col-lg-2 p-1">
+          <div class="col-6 col-sm-4 col-md-3 col-lg-2">
             <article>
               <img class="img-fluid" src="https://picsum.photos/300/400/?random" alt="">
               <div class="article-div">
@@ -98,7 +99,7 @@
               </div>
             </article>
           </div>
-          <div class="col-6 col-sm-4 col-md-3 col-lg-2 p-1">
+          <div class="col-6 col-sm-4 col-md-3 col-lg-2">
             <article>
               <img class="img-fluid" src="https://picsum.photos/300/400/?random" alt="">
               <div class="article-div">
@@ -108,7 +109,7 @@
               </div>
             </article>
           </div>
-          <div class="col-6 col-sm-4 col-md-3 col-lg-2 p-1">
+          <div class="col-6 col-sm-4 col-md-3 col-lg-2">
             <article>
               <img class="img-fluid" src="https://picsum.photos/300/400/?random" alt="">
               <div class="article-div">
@@ -118,7 +119,7 @@
               </div>
             </article>
           </div>
-          <div class="col-6 col-sm-4 col-md-3 col-lg-2 p-1">
+          <div class="col-6 col-sm-4 col-md-3 col-lg-2">
             <article>
               <img class="img-fluid" src="https://picsum.photos/300/400/?random" alt="">
               <div class="article-div">
@@ -128,7 +129,7 @@
               </div>
             </article>
           </div>
-          <div class="col-6 col-sm-4 col-md-3 col-lg-2 p-1">
+          <div class="col-6 col-sm-4 col-md-3 col-lg-2">
             <article>
               <img class="img-fluid" src="https://picsum.photos/300/400/?random" alt="">
               <div class="article-div">
@@ -138,7 +139,7 @@
               </div>
             </article>
           </div>
-          <div class="col-6 col-sm-4 col-md-3 col-lg-2 p-1">
+          <div class="col-6 col-sm-4 col-md-3 col-lg-2">
             <article>
               <img class="img-fluid" src="https://picsum.photos/300/400/?random" alt="">
               <div class="article-div">
@@ -148,7 +149,7 @@
               </div>
             </article>
           </div>
-          <div class="col-6 col-sm-4 col-md-3 col-lg-2 p-1">
+          <div class="col-6 col-sm-4 col-md-3 col-lg-2">
             <article>
               <img class="img-fluid" src="https://picsum.photos/300/400/?random" alt="">
               <div class="article-div">
@@ -158,7 +159,7 @@
               </div>
             </article>
           </div>
-          <div class="col-6 col-sm-4 col-md-3 col-lg-2 p-1">
+          <div class="col-6 col-sm-4 col-md-3 col-lg-2">
             <article>
               <img class="img-fluid" src="https://picsum.photos/300/400/?random" alt="">
               <div class="article-div">
@@ -168,7 +169,7 @@
               </div>
             </article>
           </div>
-          <div class="col-6 col-sm-4 col-md-3 col-lg-2 p-1">
+          <div class="col-6 col-sm-4 col-md-3 col-lg-2">
             <article>
               <img class="img-fluid" src="https://picsum.photos/300/400/?random" alt="">
               <div class="article-div">
@@ -178,7 +179,7 @@
               </div>
             </article>
           </div>
-          <div class="col-6 col-sm-4 col-md-3 col-lg-2 p-1">
+          <div class="col-6 col-sm-4 col-md-3 col-lg-2">
             <article>
               <img class="img-fluid" src="https://picsum.photos/300/400/?random" alt="">
               <div class="article-div">
@@ -188,7 +189,7 @@
               </div>
             </article>
           </div>
-          <div class="col-6 col-sm-4 col-md-3 col-lg-2 p-1">
+          <div class="col-6 col-sm-4 col-md-3 col-lg-2">
             <article>
               <img class="img-fluid" src="https://picsum.photos/300/400/?random" alt="">
               <div class="article-div">
@@ -198,7 +199,7 @@
               </div>
             </article>
           </div>
-          <div class="col-6 col-sm-4 col-md-3 col-lg-2 p-1">
+          <div class="col-6 col-sm-4 col-md-3 col-lg-2">
             <article>
               <img class="img-fluid" src="https://picsum.photos/300/400/?random" alt="">
               <div class="article-div">
@@ -208,7 +209,7 @@
               </div>
             </article>
           </div>
-          <div class="col-6 col-sm-4 col-md-3 col-lg-2 p-1">
+          <div class="col-6 col-sm-4 col-md-3 col-lg-2">
             <article>
               <img class="img-fluid" src="https://picsum.photos/300/400/?random" alt="">
               <div class="article-div">
@@ -218,7 +219,7 @@
               </div>
             </article>
           </div>
-          <div class="col-6 col-sm-4 col-md-3 col-lg-2 p-1">
+          <div class="col-6 col-sm-4 col-md-3 col-lg-2">
             <article>
               <img class="img-fluid" src="https://picsum.photos/300/400/?random" alt="">
               <div class="article-div">
