articles added by catalog_x10.js

--- a/index.html
+++ b/index.html
@@ -48,187 +48,7 @@
     <main>
       <h2>Spring Summer 2017</h2>
       <div class="container">
-        <div class="row">
-          <div class="col-6 col-sm-4 col-md-3 col-lg-2">
-            <article>
-              <img class="img-fluid" src="https://picsum.photos/300/400/?random" alt="">
-              <div class="article-div">
-                <h3>BUY</h3>
-                <h4>Winter Scarf</h4>
-                <h5>180$</h5>
-              </div>
-            </article>
-          </div>
-          <div class="col-6 col-sm-4 col-md-3 col-lg-2">
-            <article>
-              <img class="img-fluid" src="https://picsum.photos/300/400/?random" alt="">
-              <div class="article-div">
-                <h3>BUY</h3>
-                <h4>Winter Scarf</h4>
-                <h5>$180.00</h5>
-              </div>
-            </article>
-          </div>
-          <div class="col-6 col-sm-4 col-md-3 col-lg-2">
-            <article>
-              <img class="img-fluid" src="https://picsum.photos/300/400/?random" alt="">
-              <div class="article-div">
-                <h3>ON SALE</h3>
-                <h4>Summer Sandals</h4>
-                <h5>$220.00</h5>
-              </div>
-            </article>
-          </div>
-          <div class="col-6 col-sm-4 col-md-3 col-lg-2">
-            <article>
-              <img class="img-fluid" src="https://picsum.photos/300/400/?random" alt="">
-              <div class="article-div">
-                <h3>BUY</h3>
-                <h4>Red Had and Worf</h4>
-                <h5>$20.00</h5>
-              </div>
-            </article>
-          </div>
-          <div class="col-6 col-sm-4 col-md-3 col-lg-2">
-            <article>
-              <img class="img-fluid" src="https://picsum.photos/300/400/?random" alt="">
-              <div class="article-div">
-                <h3>BUY</h3>
-                <h4>Green Coat</h4>
-                <h5>$220.00</h5>
-              </div>
-            </article>
-          </div>
-          <div class="col-6 col-sm-4 col-md-3 col-lg-2">
-            <article>
-              <img class="img-fluid" src="https://picsum.photos/300/400/?random" alt="">
-              <div class="article-div">
-                <h3>ON SALE</h3>
-                <h4>Dark Coat</h4>
-                <h5>$220.00</h5>
-              </div>
-            </article>
-          </div>
-          <div class="col-6 col-sm-4 col-md-3 col-lg-2">
-            <article>
-              <img class="img-fluid" src="https://picsum.photos/300/400/?random" alt="">
-              <div class="article-div">
-                <h3>BUY</h3>
-                <h4>Blue Troursers</h4>
-                <h5>$220.00</h5>
-              </div>
-            </article>
-          </div>
-          <div class="col-6 col-sm-4 col-md-3 col-lg-2">
-            <article>
-              <img class="img-fluid" src="https://picsum.photos/300/400/?random" alt="">
-              <div class="article-div">
-                <h3>SOLD OUT</h3>
-                <h4>Blue Sweater</h4>
-                <h5>$220.00</h5>
-              </div>
-            </article>
-          </div>
-          <div class="col-6 col-sm-4 col-md-3 col-lg-2">
-            <article>
-              <img class="img-fluid" src="https://picsum.photos/300/400/?random" alt="">
-              <div class="article-div">
-                <h3>BUY</h3>
-                <h4>Blue Shirt</h4>
-                <h5>$220.00</h5>
-              </div>
-            </article>
-          </div>
-          <div class="col-6 col-sm-4 col-md-3 col-lg-2">
-            <article>
-              <img class="img-fluid" src="https://picsum.photos/300/400/?random" alt="">
-              <div class="article-div">
-                <h3>ON SALE</h3>
-                <h4>Blue backpack</h4>
-                <h5>$120.00</h5>
-              </div>
-            </article>
-          </div>
-          <div class="col-6 col-sm-4 col-md-3 col-lg-2">
-            <article>
-              <img class="img-fluid" src="https://picsum.photos/300/400/?random" alt="">
-              <div class="article-div">
-                <h3>ON SALE</h3>
-                <h4>Beach Chair</h4>
-                <h5>$80.00</h5>
-              </div>
-            </article>
-          </div>
-          <div class="col-6 col-sm-4 col-md-3 col-lg-2">
-            <article>
-              <img class="img-fluid" src="https://picsum.photos/300/400/?random" alt="">
-              <div class="article-div">
-                <h3>ON SALE</h3>
-                <h4>Decoration Letter</h4>
-                <h5>$120.00</h5>
-              </div>
-            </article>
-          </div>
-          <div class="col-6 col-sm-4 col-md-3 col-lg-2">
-            <article>
-              <img class="img-fluid" src="https://picsum.photos/300/400/?random" alt="">
-              <div class="article-div">
-                <h3>ON SALE</h3>
-                <h4>Sutton Bench</h4>
-                <h5>$120.00</h5>
-              </div>
-            </article>
-          </div>
-          <div class="col-6 col-sm-4 col-md-3 col-lg-2">
-            <article>
-              <img class="img-fluid" src="https://picsum.photos/300/400/?random" alt="">
-              <div class="article-div">
-                <h3>BUY</h3>
-                <h4>Red Troursers</h4>
-                <h5>$220.00</h5>
-              </div>
-            </article>
-          </div>
-          <div class="col-6 col-sm-4 col-md-3 col-lg-2">
-            <article>
-              <img class="img-fluid" src="https://picsum.photos/300/400/?random" alt="">
-              <div class="article-div">
-                <h3>ON SALE</h3>
-                <h4>Winter Sandals</h4>
-                <h5>$220.00</h5>
-              </div>
-            </article>
-          </div>
-          <div class="col-6 col-sm-4 col-md-3 col-lg-2">
-            <article>
-              <img class="img-fluid" src="https://picsum.photos/300/400/?random" alt="">
-              <div class="article-div">
-                <h3>ON SALE</h3>
-                <h4>Beach Chair</h4>
-                <h5>$80.00</h5>
-              </div>
-            </article>
-          </div>
-          <div class="col-6 col-sm-4 col-md-3 col-lg-2">
-            <article>
-              <img class="img-fluid" src="https://picsum.photos/300/400/?random" alt="">
-              <div class="article-div">
-                <h3>BUY</h3>
-                <h4>Winter Scarf</h4>
-                <h5>$180.00</h5>
-              </div>
-            </article>
-          </div>
-          <div class="col-6 col-sm-4 col-md-3 col-lg-2">
-            <article>
-              <img class="img-fluid" src="https://picsum.photos/300/400/?random" alt="">
-              <div class="article-div">
-                <h3>ON SALE</h3>
-                <h4>Winter Scarf</h4>
-                <h5>$120.00</h5>
-              </div>
-            </article>
-          </div>
+        <div class="row" id="catalog">
         </div>
       </div>
     </main>
@@ -272,6 +92,7 @@
 
     <script src="node_modules/jquery/dist/jquery.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="js/catalog_x10.js"></script>
     <script src="js/app.js"></script>
   </body>
 </html>
