integration boutique finish

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <h2>We craft ocean friendly apparel</h2>
         <a class="btn" href="#">BROWSE OUR PRODUCTS</a>
       </div>
-      <a class="arrow" href="#"><i class="fas fa-angle-down"></i></a>
+      <a class="arrow" href="#fooTer"><i class="fas fa-angle-down"></i></a>
     </header>
     <main>
       <h2>Spring Summer 2017</h2>
@@ -54,7 +54,7 @@
     </main>
     <footer>
       <div class="container">
-        <div class="row">
+        <div class="row" id="fooTer">
           <div class="col-12 col-md-3">
             <h3>Quick links</h3>
             <ul>
