page produit presque ok reste centrage image

--- a/index.html
+++ b/index.html
@@ -9,12 +9,11 @@
     <link href="https://fonts.googleapis.com/css?family=Quicksand:300" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 
-    <title>Template</title>
+    <title>Home</title>
   </head>
-  <body class="indexBoutique">
+  <body class="index">
     <header>
         <div id="nav-placeholder">
-
         </div>
       <div class="title">
         <h1>SUNDAYS</h1>
@@ -31,7 +30,6 @@
       </div>
     </main>
     <div id="footer-placeholder">
-        
     </div>
     <script src="node_modules/jquery/dist/jquery.min.js"></script>
     <script>$(function(){
