--- a/nav.html
+++ b/nav.html
@@ -6,16 +6,16 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="#">Catalog<span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="index.html">Catalog<span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">About Us</a>
+        <a class="nav-link" href="#fooTer">About Us</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Stores</a>
+        <a class="nav-link" href="product.html">Stores</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Blog</a>
+        <a class="nav-link" href="#fooTer">Blog</a>
       </li>
     </ul>
 <form class="form-inline my-2 my-lg-0">
