fini enfin presque

--- a/nav.html
+++ b/nav.html
@@ -12,7 +12,7 @@
         <a class="nav-link" href="#fooTer">About Us</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="product.html">Stores</a>
+        <a class="nav-link" href="#catalog">Stores</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#fooTer">Blog</a>
