--- a/index.html
+++ b/index.html
@@ -39,6 +39,6 @@
     </script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="js/catalog_x10.js"></script>
-    <script src="js/app.js"></script>
+    <script src="js/index.js"></script>
   </body>
 </html>
