--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
   </head>
   <body class="index">
     <header>
-        <div id="nav-placeholder">
-        </div>
+        <div id="nav-placeholder"></div>
       <div class="title">
         <h1>SUNDAYS</h1>
         <h2>We craft ocean friendly apparel</h2>
@@ -29,8 +28,7 @@
         </div>
       </div>
     </main>
-    <div id="footer-placeholder">
-    </div>
+    <div id="footer-placeholder"></div>
     <script src="node_modules/jquery/dist/jquery.min.js"></script>
     <script>$(function(){
         $('#nav-placeholder').load("nav.html");
